--- a/sass/style.sass
+++ b/sass/style.sass
@@ -124,9 +124,27 @@ ul#history-list li
 	.history-date
 		font-size: 10px
 		line-height: 24px
-		margin-right: 15px
+		margin-right: 20px
 		color: #ccc
 		font-family: Helvetica, Arial, sans-serif
+	.history-elapsed
+		font-size: 20px
+		margin-left: 20px
+		color: #fff
+		+text-shadow(rgba(black, .9) 0px -1px 0px)
+		font-family: Georgia, serif
+	.history-slash
+		color: #ccc
+		font-size: 10px
+	.history-target
+		font-size: 10px
+		color: #ddd
+	.history-ratio
+		font-size: 20px
+		margin-left: 20px
+		color: #fff
+		+text-shadow(rgba(black, .9) 0px -1px 0px)
+		font-family: Georgia, serif
 
 .time
 	font-family: Georgia, serif
