--- a/css/style.css
+++ b/css/style.css
@@ -231,18 +231,44 @@ ul#history-list li {
 ul#history-list li .history-date {
   font-size: 10px;
   line-height: 24px;
-  margin-right: 15px;
+  margin-right: 20px;
   color: #cccccc;
   font-family: Helvetica, Arial, sans-serif;
 }
+/* line 130, ../sass/style.sass */
+ul#history-list li .history-elapsed {
+  font-size: 20px;
+  margin-left: 20px;
+  color: white;
+  text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
+  font-family: Georgia, serif;
+}
+/* line 136, ../sass/style.sass */
+ul#history-list li .history-slash {
+  color: #cccccc;
+  font-size: 10px;
+}
+/* line 139, ../sass/style.sass */
+ul#history-list li .history-target {
+  font-size: 10px;
+  color: #dddddd;
+}
+/* line 142, ../sass/style.sass */
+ul#history-list li .history-ratio {
+  font-size: 20px;
+  margin-left: 20px;
+  color: white;
+  text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
+  font-family: Georgia, serif;
+}
 
-/* line 131, ../sass/style.sass */
+/* line 149, ../sass/style.sass */
 .time {
   font-family: Georgia, serif;
   font-weight: normal;
 }
 
-/* line 135, ../sass/style.sass */
+/* line 153, ../sass/style.sass */
 h2 {
   font-family: Georgia, sans-serif;
   font-style: italic;
@@ -250,7 +276,7 @@ h2 {
   margin-bottom: 20px;
 }
 
-/* line 141, ../sass/style.sass */
+/* line 159, ../sass/style.sass */
 h3 {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
@@ -262,7 +288,7 @@ h3 {
   text-transform: uppercase;
 }
 
-/* line 151, ../sass/style.sass */
+/* line 169, ../sass/style.sass */
 h4 {
   font-size: 12px;
   font-family: "Montserrat", sans-serif;
@@ -274,7 +300,7 @@ h4 {
   text-transform: uppercase;
 }
 
-/* line 161, ../sass/style.sass */
+/* line 179, ../sass/style.sass */
 h5 {
   font-family: Georgia, sans-serif;
   font-style: normal;
@@ -283,7 +309,7 @@ h5 {
   margin-top: 10px;
 }
 
-/* line 168, ../sass/style.sass */
+/* line 186, ../sass/style.sass */
 h6 {
   font-size: 15px;
   font-family: "Montserrat", sans-serif;
@@ -296,7 +322,7 @@ h6 {
   margin-bottom: 10px;
 }
 
-/* line 179, ../sass/style.sass */
+/* line 197, ../sass/style.sass */
 #logo {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
@@ -310,7 +336,7 @@ h6 {
   float: left;
 }
 
-/* line 191, ../sass/style.sass */
+/* line 209, ../sass/style.sass */
 #welcome {
   float: right;
   font-family: Georgia, serif;
@@ -323,12 +349,12 @@ h6 {
   margin-right: 15px;
 }
 
-/* line 202, ../sass/style.sass */
+/* line 220, ../sass/style.sass */
 .clear {
   clear: both;
 }
 
-/* line 205, ../sass/style.sass */
+/* line 223, ../sass/style.sass */
 .stat {
   font-family: Georgia, serif;
   color: white;
@@ -339,7 +365,7 @@ h6 {
   margin-top: 10px;
 }
 
-/* line 214, ../sass/style.sass */
+/* line 232, ../sass/style.sass */
 .stat-title {
   font-size: 9px;
   font-family: "Montserrat", sans-serif;
@@ -350,7 +376,7 @@ h6 {
   margin-bottom: 8px;
 }
 
-/* line 223, ../sass/style.sass */
+/* line 241, ../sass/style.sass */
 .stat-description {
   font-family: Georgia, serif;
   color: white;
@@ -362,14 +388,14 @@ h6 {
   margin-bottom: 20px;
 }
 
-/* line 233, ../sass/style.sass */
+/* line 251, ../sass/style.sass */
 #time-stats {
   float: left;
   width: 360px;
   margin-right: 60px;
 }
 
-/* line 238, ../sass/style.sass */
+/* line 256, ../sass/style.sass */
 #time-remaining {
   font-family: Georgia, serif;
   font-size: 140px;
@@ -378,25 +404,25 @@ h6 {
   margin-bottom: 50px;
 }
 
-/* line 245, ../sass/style.sass */
+/* line 263, ../sass/style.sass */
 #midtask-options {
   float: right;
   width: 235px;
 }
 
-/* line 249, ../sass/style.sass */
+/* line 267, ../sass/style.sass */
 #time-stats-left {
   float: left;
   width: 140px;
 }
 
-/* line 253, ../sass/style.sass */
+/* line 271, ../sass/style.sass */
 #time-stats-right {
   float: right;
   width: 140px;
 }
 
-/* line 258, ../sass/style.sass */
+/* line 276, ../sass/style.sass */
 button {
   display: inline-block;
   margin: 0 2px;
@@ -419,23 +445,23 @@ button {
   box-shadow: rgba(0, 0, 0, 0.4) 0 1px 2px;
 }
 
-/* line 272, ../sass/style.sass */
+/* line 290, ../sass/style.sass */
 button:hover, input[type="submit"].button:hover {
   text-decoration: none;
 }
 
-/* line 275, ../sass/style.sass */
+/* line 293, ../sass/style.sass */
 button:active, input[type="submit"].button:active {
   position: relative;
   top: 1px;
 }
 
-/* line 279, ../sass/style.sass */
+/* line 297, ../sass/style.sass */
 .small {
   font-size: 12px;
 }
 
-/* line 282, ../sass/style.sass */
+/* line 300, ../sass/style.sass */
 .set-time-button {
   font-size: 25px;
   font-weight: bold;
@@ -473,13 +499,13 @@ button:active, input[type="submit"].button:active {
   left: 50%;
   z-index: 2;
 }
-/* line 296, ../sass/style.sass */
+/* line 314, ../sass/style.sass */
 .set-time-button:active {
   position: absolute;
   top: 50px;
 }
 
-/* line 300, ../sass/style.sass */
+/* line 318, ../sass/style.sass */
 .catchphrase {
   position: absolute;
   width: 300px;
@@ -489,7 +515,7 @@ button:active, input[type="submit"].button:active {
   margin-left: -150px;
 }
 
-/* line 308, ../sass/style.sass */
+/* line 326, ../sass/style.sass */
 #minutes {
   position: absolute;
   left: 50%;
@@ -499,7 +525,7 @@ button:active, input[type="submit"].button:active {
   z-index: 4;
 }
 
-/* line 316, ../sass/style.sass */
+/* line 334, ../sass/style.sass */
 #time-muncher {
   font-size: 80px;
   -moz-border-radius: 150px;
@@ -521,7 +547,7 @@ button:active, input[type="submit"].button:active {
   z-index: 3;
   border: solid 1px #f0c683;
 }
-/* line 331, ../sass/style.sass */
+/* line 349, ../sass/style.sass */
 #time-muncher:hover {
   border: solid 2px #eaa12d;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #dddddd));
@@ -532,7 +558,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ffffff, #dddddd);
 }
 
-/* line 335, ../sass/style.sass */
+/* line 353, ../sass/style.sass */
 .time-minus-button {
   font-size: 25px;
   font-weight: bold;
@@ -570,7 +596,7 @@ button:active, input[type="submit"].button:active {
   z-index: 2;
 }
 
-/* line 349, ../sass/style.sass */
+/* line 367, ../sass/style.sass */
 .time-plus-button {
   font-size: 25px;
   font-weight: bold;
@@ -608,7 +634,7 @@ button:active, input[type="submit"].button:active {
   z-index: 1;
 }
 
-/* line 363, ../sass/style.sass */
+/* line 381, ../sass/style.sass */
 .set-name-button {
   font-weight: bold;
   position: absolute;
@@ -619,7 +645,7 @@ button:active, input[type="submit"].button:active {
   z-index: 1;
 }
 
-/* line 372, ../sass/style.sass */
+/* line 390, ../sass/style.sass */
 .midtask {
   width: 230px;
   margin: 15px auto;
@@ -627,7 +653,7 @@ button:active, input[type="submit"].button:active {
   line-height: 31px;
 }
 
-/* line 378, ../sass/style.sass */
+/* line 396, ../sass/style.sass */
 .logout {
   font-size: 8px;
   text-transform: uppercase;
@@ -636,7 +662,7 @@ button:active, input[type="submit"].button:active {
   margin-left: 3px;
 }
 
-/* line 386, ../sass/style.sass */
+/* line 404, ../sass/style.sass */
 .white {
   color: #333333;
   text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0px;
@@ -649,7 +675,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ffffff, #dddddd);
 }
 
-/* line 392, ../sass/style.sass */
+/* line 410, ../sass/style.sass */
 .white:hover {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ededed), color-stop(100%, #ededed));
   background-image: -webkit-linear-gradient(#ededed, #ededed);
@@ -659,7 +685,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ededed, #ededed);
 }
 
-/* line 395, ../sass/style.sass */
+/* line 413, ../sass/style.sass */
 .white:active {
   color: #999999;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dddddd), color-stop(100%, #ffffff));
@@ -670,7 +696,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#dddddd, #ffffff);
 }
 
-/* line 399, ../sass/style.sass */
+/* line 417, ../sass/style.sass */
 .orange {
   color: #333333;
   text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0px;
@@ -683,7 +709,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#ffffff, #f0c683);
 }
 
-/* line 405, ../sass/style.sass */
+/* line 423, ../sass/style.sass */
 .orange:hover {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f0c683), color-stop(100%, #f0c683));
   background-image: -webkit-linear-gradient(#f0c683, #f0c683);
@@ -693,7 +719,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#f0c683, #f0c683);
 }
 
-/* line 408, ../sass/style.sass */
+/* line 426, ../sass/style.sass */
 .orange:active {
   color: #999999;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f0c683), color-stop(100%, #ffffff));
@@ -704,7 +730,7 @@ button:active, input[type="submit"].button:active {
   background-image: linear-gradient(#f0c683, #ffffff);
 }
 
-/* line 412, ../sass/style.sass */
+/* line 430, ../sass/style.sass */
 #overlay {
   position: fixed;
   background: rgba(0, 0, 0, 0.8);
@@ -717,7 +743,7 @@ button:active, input[type="submit"].button:active {
   z-index: 100;
   display: none;
 }
-/* line 420, ../sass/style.sass */
+/* line 438, ../sass/style.sass */
 #overlay #overlay-wrap {
   width: 600px;
   position: relative;
@@ -727,7 +753,7 @@ button:active, input[type="submit"].button:active {
   margin-top: -250px;
   margin-left: -300px;
 }
-/* line 428, ../sass/style.sass */
+/* line 446, ../sass/style.sass */
 #overlay h1 {
   color: white;
   text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
@@ -738,14 +764,14 @@ button:active, input[type="submit"].button:active {
   text-transform: lowercase;
   margin-bottom: 30px;
 }
-/* line 437, ../sass/style.sass */
+/* line 455, ../sass/style.sass */
 #overlay h2 {
   color: white;
   text-shadow: rgba(0, 0, 0, 0.9) 0px -1px 0px;
   text-align: center;
   margin-bottom: 40px;
 }
-/* line 442, ../sass/style.sass */
+/* line 460, ../sass/style.sass */
 #overlay .overlay-yes {
   font-size: 50px;
   -moz-border-radius: 10px;
@@ -761,7 +787,7 @@ button:active, input[type="submit"].button:active {
   height: 200px;
   width: 200px;
 }
-/* line 451, ../sass/style.sass */
+/* line 469, ../sass/style.sass */
 #overlay .overlay-no-top {
   font-size: 50px;
   -moz-border-radius: 10px;
@@ -779,12 +805,12 @@ button:active, input[type="submit"].button:active {
   width: 355px;
   text-align: left;
 }
-/* line 462, ../sass/style.sass */
+/* line 480, ../sass/style.sass */
 #overlay .overlay-no-top span {
   font-size: 17px;
   line-height: 90px;
 }
-/* line 465, ../sass/style.sass */
+/* line 483, ../sass/style.sass */
 #overlay .overlay-no-bottom {
   font-size: 50px;
   -moz-border-radius: 10px;
@@ -801,7 +827,7 @@ button:active, input[type="submit"].button:active {
   width: 355px;
   text-align: left;
 }
-/* line 475, ../sass/style.sass */
+/* line 493, ../sass/style.sass */
 #overlay .overlay-no-bottom span {
   font-size: 17px;
   line-height: 90px;
