--- a/sass/style.sass
+++ b/sass/style.sass
@@ -114,6 +114,15 @@ input
 	margin: 0 0 0 -315px
 	z-index: 1
 	
+.history-title
+	font-size: 9px
+	font-family: 'Montserrat', sans-serif
+	letter-spacing: 1px
+	color: white
+	text-align: center
+	text-transform: uppercase
+	margin-bottom: 15px
+	margin-top: 20px
 
 ul#history-list li
 	list-style: none
@@ -145,6 +154,8 @@ ul#history-list li
 		color: #fff
 		+text-shadow(rgba(black, .9) 0px -1px 0px)
 		font-family: Georgia, serif
+	
+
 
 .time
 	font-family: Georgia, serif
